--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,11 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
+    role_hierarchy:
+        ROLE_HOST:       [ROLE_USER]
+        ROLE_ADMIN:      [ROLE_HOST]
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
